# SeqPID

./: .gitignore
comparison_outputs/: 100_stock_7d_param_rms.csv  env_adjusted_stability_5d.csv  stable_quantity_search_5d.csv
comparison_outputs/20260709_fileflow/: stock_list_first100_complete_from_input.csv  stock_list_from_input.csv
scripts/git/: .env.example  commit.ps1
scripts/vercel/: .env.example  README.md  _common.ps1  deploy_webui.cmd  deploy_webui.ps1
scripts/work/: README.md  open_analysis_gui.cmd  open_analysis_gui.ps1  run_ana.ps1  run_ana_python.cmd  run_ana_rust.cmd  run_ana_rust_python.cmd  run_level2_analysis.cmd  run_level2_analysis.ps1  run_multi_day_analysis.cmd  run_multi_day_analysis.ps1
src-rust/: Cargo.toml  test_stocks.csv
src-rust/configs/: dev.yaml  label_dict.yaml
src-rust/src/: batch_alerts.rs  batch_reporting.rs  capital_model.rs  config.rs  exporter.rs  gui.rs  main.rs  market_pid.rs  order_lifecycle.rs  pattern_model.rs  pid_decomposer.rs  scheduler.rs  schema_probe.rs  schemas.rs  state_feature_builder.rs
web/: HISTORY.md  README.md
web/adata/: __version__.py
web/docs/: daily_market_display_design.md  web.md
webUI/tongstock-master/: go.mod  (+2 more)
比赛系统/: README.md  analysis_gui.py  init_env.sh  main.py
比赛设计文档/: 100股默认配置双引擎对比_20260710_20260714.md  PID原理与实现.md  PID算法与实现.md  模式分类模型设计说明书.md  比赛概要设计说明书.md  比赛系统建设_check_list.md  比赛详细设计说明书.md  算法设计.md  统一资金类型判断规范.md  金融领域的物理学概念模型.md
背景知识介绍/: L2接口参数定义与使用说明.md  readme.txt  一、 任务介绍.txt  七、任务样例.txt  三、 任务数据.txt  二、 任务目标.txt  五、 任务规则及提交说明.txt  六、入围规则.txt  四、 数据集构成.txt  时间窗口补充说明.md
(+442 files in other folders)
