[package]
name = "competition_system"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
zip = "2"
anyhow = "1"
glob = "0.3"
encoding_rs = "0.8"
rayon = "1"
eframe = "0.27"
rfd = "0.14"
